Fixed Font Size on mobile

--- a/style.css
+++ b/style.css
@@ -183,6 +183,10 @@
             font-size: 1.1em;
         }
 
+        body{
+            font-size: 16px;
+        }
+
     }
 
     @media (max-width:250px){
